// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuakeInfo /> renders an error if loading failed 1`] = `
<div
  className="QuakeInfo"
>
  <p>
    Oops, Failed to load info!
  </p>
</div>
`;

exports[`<QuakeInfo /> renders the <QuakeCard /> if loading was successful 1`] = `
<div
  className="QuakeInfo"
>
  <div
    className="QuakeCard"
  >
    <h4>
      Quake Card
    </h4>
    <ul>
      <li>
        Name: 
        Welly
      </li>
      <li>
        Phone: 
        007
      </li>
      <li>
        Email: 
        test@gmail.com
      </li>
      <li>
        Website: 
        www.test.com
      </li>
    </ul>
  </div>
</div>
`;

exports[`<QuakeInfo /> renders the loading status if data invalid 1`] = `
<div
  className="QuakeInfo"
>
  <p>
    Loading...
  </p>
</div>
`;

exports[`<QuakeInfo /> renders the loading status if requesting data 1`] = `
<div
  className="QuakeInfo"
>
  <p>
    Loading...
  </p>
</div>
`;
